--- a/App/Yeezo/Podfile
+++ b/App/Yeezo/Podfile
@@ -3,8 +3,10 @@
 
 target 'Yeezo' do
   # Comment the next line if you don't want to use dynamic frameworks
+  source 'https://github.com/CocoaPods/Specs.git'
+  platform :ios, '9.0'
   use_frameworks!
 
   # Pods for Yeezo
-  pod SwiftUIJoystick
+  pod 'Starscream', '~> 4.0.0'
 end
